# airport-tafor-dashboard

./: .gitignore  README.md  pyproject.toml
data/: research_log.jsonl
data/models/: champion.json  gbm.joblib  linreg.joblib  lstm.joblib  mlp.joblib  seq2seq.joblib  stacker.joblib  tft.joblib
docs/: AUTONOMOUS_RESEARCH.md  ERA5_TO_IFS.md  HANDOFF.md  ISSUES.md  ML_PLAN.md  PHASE_D_ROADMAP.md  PLAN.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  Comparison.jsx  Scorecard.jsx  SpainMap.jsx  StationCharts.jsx  api.js  styles.css
research/: README.md  taf_from_nwp_review.md  taf_from_nwp_review.tex
research/figures/: make_figures.py
scripts/: ensemble_eval.py  mlp_hpo.py  nwp_smoke.py  reverify_prob.py  stack_ablation.py  stack_analysis.py  stack_ensemble.py  stacked_taf.py  train_ladder.py  train_seq.py  warm_era5_cache.py  warm_taf_cache.py
src/wx/: config.py
src/wx/ai/: compare.py  dataset.py  evaluate.py  features.py  generate.py  importance.py  models.py  prob_groups.py  promote.py  seq_dataset.py  seq_models.py  tft_models.py  torch_models.py  train.py
src/wx/api/: app.py  deps.py
src/wx/api/routes/: metar.py  nwp.py  stations.py  taf.py  verification.py
src/wx/db/: connection.py  parquet_store.py  repositories.py  schema.sql
src/wx/ingestion/: base.py  metar_iem.py  nwp_era5.py  nwp_ifs.py  ogimet.py
src/wx/parsing/: metar.py  normalize.py  taf.py  timeutil.py
src/wx/pipelines/: backfill.py
src/wx/verification/: align.py  bulk.py  runner.py  scores.py  timeline.py
tests/: test_ai.py  test_dataset.py  test_dataset_ifs.py  test_evaluate.py  test_importance.py  test_ingestion.py  test_models.py  test_nwp.py  test_nwp_ifs.py  test_parquet_store.py  test_parsing.py  test_prob_groups.py  test_probabilistic.py  test_seq_dataset.py  test_seq_models.py  test_tft_models.py  test_torch_models.py  test_verification.py
