[project]
name = "airport-tafor-dashboard"
version = "0.1.0"
description = "Ingest, parse and verify METAR/TAF for Spanish airports (historical 2020-2025), with a FastAPI backend and React dashboard."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "duckdb>=1.1",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pandas>=2.2",
    "httpx>=0.28",
    "tenacity>=9.0",
    "metar-taf-parser-mivek>=1.8",
    "typer>=0.15",
    "rich>=13.9",
    "python-dateutil>=2.9",
    "pytz>=2024.2",
]

[project.optional-dependencies]
nwp = [
    "cdsapi>=0.7",
    "xarray>=2024.10",
    "netCDF4>=1.7",
]
ml = [
    "scikit-learn>=1.5",
    "joblib>=1.4",
]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
]

[project.scripts]
wx = "wx.pipelines.backfill:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wx"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
